# hell_and_heaven

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.autosave  README.md  build.sh
core_base/: CMakeLists.txt  psx_base_buffer.cpp  psx_base_buffer.h  psx_base_file.cpp  psx_base_file.h
core_files/: CMakeLists.txt  file_stream.cpp  file_stream.h  filesystem.cpp  filesystem.h  notify.cpp  notify.h  psx_directory.cpp  psx_directory.h  psx_files.cpp  psx_files.h  psx_files.h.autosave  psx_read_streambuf.h  psx_streambuf.h  psx_write_streambuf.h
core_files/tests/: test_filestreams.cpp
core_info/: CMakeLists.txt  system_info.cpp  system_info.h
core_info/psx2_time/: psx_time.cpp  psx_time.h  psx_timer.cpp  psx_timer.h
core_info/time/: clock_time.h  process_time.cpp  process_time.h
core_ipc/: CMakeLists.txt  psx_base_buffer.cpp  psx_base_buffer.h
core_ipc/data_interection/: CMakeLists.txt  psx_base_message_sequenc.h
core_ipc/data_interection/pipes/: CMakeLists.txt  psx_fifo.cpp  psx_fifo.h  psx_pipe.cpp  psx_pipe.h
core_ipc/data_interection/possix_ipc/: CMakeLists.txt  possix_message_sequence.cpp  possix_message_sequence.h
core_ipc/maped_memory/: CMakeLists.txt  psx_mmap.cpp  psx_mmap.h
core_ipc/psx_sockets/: CMakeLists.txt  base_socket.cpp  base_socket.h  psx_adress.h  psx_datagramm_sockets.h  psx_ip_adress.cpp  psx_ip_adress.h  psx_stream_sockets.h  psx_tcp_socket.h  psx_udp_socket.h
core_process/: CMakeLists.txt  accouting_process.cpp  accouting_process.h  base_process.cpp  base_process.h  exe_arg.cpp  exe_arg.h  pipe_process.cpp  pipe_process.h  processes_controller.cpp  processes_controller.h  prosess.cpp  prosess.h  prosess.h.autosave  psx2_signal_info.cpp  psx2_signal_info.h  psx_alterstack.cpp  psx_alterstack.h  psx_exit_process_handler.cpp  psx_exit_process_handler.h  psx_setsignals.cpp  psx_setsignals.h  psx_signalhandler.cpp  psx_signalhandler.h  psx_signals.cpp  psx_signals.h  static_hanler.h
core_process/vir_mem/: vir_mem.cpp  vir_mem.h
core_syslog/: CMakeLists.txt  psx_syslog.cpp  psx_syslog.h
core_thread/: CMakeLists.txt  psx_mutex.cpp  psx_mutex.h  psx_thread.cpp  psx_thread.h  psx_thread_signals.cpp  psx_thread_signals.h  psx_thread_signals.h.autosave
core_user/: CMakeLists.txt  group.cpp  group.h  psx_login.cpp  psx_login.h  user.cpp  user.h
examples/: CMakeLists.txt  examle_pipe.cpp  example_acct.cpp  example_exithandler.cpp  example_filesysteminfo.cpp  example_logininfo.cpp  example_mmap.cpp  example_pipe.cpp  example_psx_syslog.cpp  example_psx_thread.cpp  example_run_programm.cpp  example_signalhandler.cpp  example_user.cpp  inotify_example.cpp
examples/example_sockets/: example_tcp_server.cpp  example_udp.cpp  example_udp_server.cpp
experiments/: CMakeLists.txt  varedict_param_to_pointer.cpp
hh_exceptions/: CMakeLists.txt  hh_exceptions.cpp  hh_exceptions.h
tests/: .vimrc  CMakeLists.txt  test_base_process.cpp  test_exe_arg.cpp  test_exearg.cpp  test_filestreams.cpp  test_logininfo.cpp  test_pid_no_change.cpp  test_pipe_process.cpp  test_process.cpp  test_psx_file.cpp  test_psx_streambud.cpp  test_setsignals.cpp  test_signal_handler.cpp  test_simple_main.cpp
tests/tetst1/: CMakeLists.txt  test1.cpp
