
#add_executable(run_example_pipe examle_pipe.cpp)
#target_link_libraries(run_example_pipe pipe_process)


#add_executable(run_example_fork example_fork.cpp)
#target_link_libraries(run_example_fork core_process)


add_executable(example_user_psw example_user.cpp)
target_link_libraries(example_user_psw core_user)

#add_executable(example_filesysteminfo example_filesysteminfo.cpp)
#target_link_libraries(example_filesysteminfo psx_filesystem)

#add_executable(inotify_example inotify_example.cpp)
#target_link_libraries(inotify_example psx_notify)

add_executable(example_signalhandler example_signalhandler.cpp)
target_link_libraries(example_signalhandler psx_signals)

add_executable(example_exit_handler example_exithandler.cpp)
target_link_libraries(example_exit_handler core_process)

add_executable(example_run_programm example_run_programm.cpp)
target_link_libraries(example_run_programm core_process)

#add_executable(example_acct example_acct.cpp)
#target_link_libraries(example_acct core_process)

add_executable(example_psx_thread example_psx_thread.cpp)
target_link_libraries(example_psx_thread psx_thread)

add_executable(example_psx_syslog example_psx_syslog.cpp)
target_link_libraries(example_psx_syslog psx_syslog)

add_executable(example_logininfo example_logininfo.cpp)
target_link_libraries(example_logininfo core_login)

add_executable(example_pipe example_pipe.cpp)
target_link_libraries(example_pipe psx_pipe core_process)

add_executable(example_mmap example_mmap.cpp)
target_link_libraries(example_mmap psx_files)

add_executable(example_udp example_sockets/example_udp.cpp)
target_link_libraries(example_udp psx_base_socket core_process)

add_executable(example_udp_server example_sockets/example_udp_server.cpp)
target_link_libraries(example_udp_server psx_base_socket core_process)
